Closed
Bug 997700
Opened 12 years ago
Closed 12 years ago
Fix build issues with LUL and --enable-warnings-as-errors
Categories
(Core :: Gecko Profiler, defect)
Tracking
()
RESOLVED
FIXED
mozilla31
People
(Reporter: roc, Assigned: jseward)
Details
Attachments
(1 file)
|
2.96 KB,
patch
|
froydnj
:
review+
|
Details | Diff | Splinter Review |
I get a bunch of errors in my --enable-warnings-as-errors build. Examples:
0:37.16 /home/roc/mozilla-inbound/tools/profiler/LulCommonExt.h: In member function ‘void lul::scoped_array<T>::reset(T*)’:
0:37.16 /home/roc/mozilla-inbound/tools/profiler/LulCommonExt.h:294:18: error: typedef ‘type_must_be_complete’ locally defined but not used [-Werror=unused-local-typedefs]
0:37.16 typedef char type_must_be_complete[sizeof(T)];
0:37.28 In file included from /home/roc/mozilla-inbound/obj-ff-debug-32/tools/profiler/Unified_cpp_tools_profiler0.cpp:93:0:
0:37.29 /home/roc/mozilla-inbound/tools/profiler/LulElf.cpp: In function ‘bool {anonymous}::LoadSymbols(const string&, bool, const typename ElfClass::Ehdr*, bool, {anonymous}::LoadSymbolsInfo<ElfClass>*, lul::SecMap*, void*, void (*)(const char*))’:
0:37.29 /home/roc/mozilla-inbound/tools/profiler/LulElf.cpp:422:35: error: typedef ‘Addr’ locally defined but not used [-Werror=unused-local-typedefs]
0:37.29 typedef typename ElfClass::Addr Addr;
| Assignee | ||
Comment 1•12 years ago
|
||
Assignee: nobody → jseward
Attachment #8408978 -
Flags: review?(nfroyd)
Updated•12 years ago
|
Attachment #8408978 -
Flags: review?(nfroyd) → review+
| Assignee | ||
Comment 2•12 years ago
|
||
Comment 3•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in
before you can comment on or make changes to this bug.
Description
•