Bug 997700 - Fix build issues with LUL and --enable-warnings-as-errors.  r=nfroyd.